# design-os

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  package-lock.json  package.json  setup.sh
design-os/: .gitignore  README.md  pyproject.toml
design-os/plugins/figma/: pyproject.toml
design-os/plugins/figma/src/design_os_figma/: __init__.py
design-os/src/design_os/: cli.py  envelope.py  evolution_core.py  evolution_proof.py  evolution_signals.py  kernel.py  plugins.py  reflect_core.py
design-os/src/design_os/commands/: __init__.py  audit.py  doctor.py  evolution.py  heartbeat.py  heartbeat_runners.py  heartbeat_runners_learning.py  reference.py  ui_passthrough.py  update.py
design-os/tests/: conftest.py  test_audit.py  test_command_evolution.py  test_command_heartbeat.py  test_doctor.py  test_envelope.py  test_evolution_core.py  test_evolution_proof.py  test_heartbeat_runner_harvest.py  test_import_budget.py  test_plugin_figma.py  test_plugins.py  test_reference_add.py  test_reflect_core.py  test_tree_contract.py  test_ui_passthrough.py  test_update.py  test_wrapper_exit_contract.py
design-os/tests/fixtures/audit-site/: clean.html  index.html
design-os/tests/goldens/: root-help.txt
docs/: dogfood-2026-05-24.md  dogfood-from-url-2026-05-27.md  v1-audit-gate.md
examples/: README.md
figma-agent/: README.md  package.json  vitest.config.ts
knowledge/: README.md  accessibility.md  content-design.md  design-agents.md  design-review.md  designmd-format.md  figma-agent-hand.md  flow-craft.md  gsap-motion-direction.md  mode-constraints.md  (+10 more)
(+546 files in other folders)
