[project]
name = "design-os"
version = "0.1.0"
description = "The DESIGN-OS conductor — a Typer umbrella over the deterministic `ui` kernel."
requires-python = ">=3.10"
dependencies = ["typer==0.26.8"]

[project.scripts]
design-os = "design_os.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/design_os"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end test that shells out to the real `ui` kernel (skipped when absent)",
]
